# wing

./: Makefile  WORKSPACE  go.mod  go.sum
go/pkg/api/: BUILD.bazel
go/pkg/api/minio/v1alpha1/: types.go  zz_generated.deepcopy.go
go/pkg/k8s/client/versioned/typed/minio/v1alpha1/: miniouser.go
go/pkg/k8s/client/versioned/typed/minio/v1alpha1/fake/: fake_miniouser.go
manifests/crd/: minio.f110.dev_miniouserlists.yaml  minio.f110.dev_miniousers.yaml
