load("@dev_f110_rules_k8s_controller//k8s:def.bzl", "k8s_code_generator")

k8s_code_generator(
    name = "gen",
    srcs = [
        "//go/pkg/api/grafana/v1alpha1",
        "//go/pkg/api/harbor/v1alpha1",
        "//go/pkg/api/minio/v1alpha1",
        "//vendor/github.com/minio/minio-operator/pkg/apis/miniocontroller/v1beta1",
    ],
    clientpackage = "go.f110.dev/mono/go/pkg/k8s/client",
    header = "//go:boilerplate.go.txt",
    informerpackage = "go.f110.dev/mono/go/pkg/k8s/informers",
    listerpackage = "go.f110.dev/mono/go/pkg/k8s/listers",
    crd = "manifests/crd",
    no_gazelle = True,
    version = "v0.19",
)
